# FlowOps

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md
.claude/: settings.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  errors.py  extensions.py  logging.py  security.py
backend/app/api/: __init__.py  admin_audit.py  asset_classes.py  assets.py  auth.py  comments.py  crews.py  daily_assignments.py  dashboard.py  health.py  history.py  inspections.py  invitations.py  links.py  map_overlays.py  openapi.py  operators.py  pacp_codes.py  schedules.py  service_areas.py  service_requests.py  task_definitions.py  tenant.py  tiles.py  users.py  wo_templates.py  work_orders.py
backend/app/cli/: schedules_tick.py  seed_demo.py  simulate_year.py
backend/app/models/: __init__.py  asset.py  asset_class.py  audit.py  crew.py  daily_assignment.py  entity_link.py  inspection.py  invitation.py  mixins.py  pacp_code.py  schedule.py  service_area.py  service_request.py  task_definition.py  tenant.py  user.py  wo_template.py  work_order.py  work_order_asset.py
backend/app/schemas/: __init__.py  asset.py  auth.py  cctv.py  daily_assignment.py  inspection.py  invitation.py  links.py  schedule.py  service_area.py  service_request.py  task_definition.py  tenant.py  user.py  work_order.py
backend/app/seeds/tasks/: catalog.py  wat_discoloured.py
backend/app/services/: asset_attrs.py  asset_import.py  asset_uid.py  audit.py  auth.py  cctv_validation.py  email.py  exif.py  geocode.py  geometry.py  invitations.py  notifications.py  permissions.py  schedules.py  sr_duplicates.py  sr_number.py  storage.py  tenancy.py  territory.py  wincan_import.py  wo_number.py  wo_state.py
backend/app/services/tasks/: smart_comments.py
backend/app/utils/: uids.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 0001_postgis_extension.py  0002_create_tenant.py  0003_create_identity.py  0004_create_audit_log.py  0005_create_asset_class.py  0006_seed_asset_classes.py  0007_create_asset.py  0008_assets_mvt_function.py  0009_create_crew.py  0010_create_work_order.py  0011_create_work_order_task.py  0012_create_work_order_time_log.py  0013_create_work_order_material.py  0014_create_work_order_attachment.py  0015_create_wo_template.py  0017_create_pacp_code.py  0018_create_service_request.py  0019_create_invitation.py  0020_links_and_schedules.py  0027_smart_comments.py  0028_service_area.py  0029_audit_hardening.py  0032_user_employee_number.py  0033_daily_assignment.py  0034_user_profile_fields.py  0035_inspection_status.py
backend/tests/: conftest.py  test_asset.py  test_asset_class.py  test_asset_class_admin.py  test_assignment_notifications.py  test_audit_log.py  test_auth.py  test_cctv.py  test_comments.py  test_daily_assignments.py  test_dashboard.py  test_healthz.py  test_inspection_lifecycle.py  test_inspections.py  test_invitations.py  test_links.py  test_openapi.py  test_operators.py  test_schedules.py  test_security_hardening.py  test_service_requests.py  test_smart_comments.py  test_sr_bulk_dispatch.py  test_tenant.py  test_tenant_filter.py  test_tiles.py  test_users.py  test_work_orders.py
docs/: API.md  BACKLOG.md  DATA_MODEL.md  DEPLOY.md  HANDOFF.md  KICKOFF.md  RUNBOOKS.md  SPEC.md
frontend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  railway.toml  (+3 more)
(+182 files in other folders)
