[project]
name = "citywater-backend"
version = "0.1.0"
description = "CityWater backend — asset & work management for water utilities."
requires-python = ">=3.12,<3.13"

# Every dependency justified per CLAUDE.md hard rule #6.
dependencies = [
    "flask>=3.0,<4",            # web framework (CLAUDE.md mandate)
    "flask-sqlalchemy>=3.1",    # SA integration with Flask app context
    "flask-migrate>=4.0",       # Alembic + `flask db upgrade` per CLAUDE.md
    "sqlalchemy>=2.0",          # typed Mapped[] style (CLAUDE.md mandate)
    "psycopg[binary]>=3.1",     # modern Postgres driver
    "geoalchemy2>=0.15",        # PostGIS column types in SQLAlchemy
    "pydantic>=2.6",            # request/response schemas (CLAUDE.md mandate)
    "pydantic-settings>=2.2",   # config from env (CLAUDE.md mandate)
    "argon2-cffi>=23.1",        # Argon2id password hashing (S1 use; dep added per kickoff)
    "flask-login>=0.6",         # session auth (CLAUDE.md mandate)
    "flask-wtf>=1.2",           # CSRF on state-changing requests (CLAUDE.md mandate)
    "email-validator>=2.1",     # required for pydantic EmailStr validation
    "geojson-pydantic>=1.1",    # typed Pydantic models for GeoJSON geometry
    "shapely>=2.0",             # geometry conversion: GeoJSON ↔ PostGIS via SA
    "jsonschema>=4",            # validate asset.attrs against asset_class.attribute_schema
    "apispec[validation]>=6.6", # OpenAPI 3 spec generation from Flask + Pydantic
    "apispec-webframeworks>=1", # Flask integration for apispec
    "boto3>=1.34",              # S3-compatible client for attachments (CLAUDE.md mandate)
    "pillow>=10",               # image handling + EXIF for attachment metadata
    "reportlab>=4.1",           # PDF rendering for canned reports (S9; SPEC §10 Q3)
    "flask-limiter>=3.7",       # rate limit auth + invite-accept endpoints (S12; SPEC §8 NFR security)
    "gunicorn>=21.2",           # production WSGI server on Railway
    "python-json-logger>=2.0,<3", # structured JSON logs in production
]

[dependency-groups]
dev = [
    "ruff>=0.4",                # lint + format (CLAUDE.md mandate)
    "pytest>=8",                # test runner (CLAUDE.md mandate)
    "pytest-flask>=1.3",        # Flask app/client fixtures
    "pytest-postgresql>=6",     # ephemeral test DBs against an existing Postgres
    "factory-boy>=3.3",         # model factories (CLAUDE.md; no models in S0 yet)
    "faker>=24",                # fake data for factories
    "httpx>=0.27",              # alt test client (request-style API)
    "moto>=5",                  # mock S3 for attachment tests (industry standard)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
# RUF001/002/003 flag the U+00D7 "×" character. We use it intentionally in
# user-facing report titles ("Condition × criticality matrix") because the
# typographic glyph is significantly clearer than ASCII "x" in PDFs and
# table headers.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
]
